--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,48 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="240dp"
-        android:src="@drawable/gom"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"></ImageView>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/add"
-        android:text="Add"
-        android:backgroundTint="@color/appBlue"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.929"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.957" />
-
     <TextView
-        android:id="@+id/textView"
+        android:layout_marginTop="10dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/tvNoRecords"
+        android:text="No Records Found"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="137dp"
-        android:layout_marginBottom="85dp"
-        android:fontFamily="@font/poppins"
-        android:text="Tablet Distribution Information"
-        android:textSize="16sp"
+        android:layout_height="wrap_content"></TextView>
+   <LinearLayout
+       android:id="@+id/mainLayout"
+       android:orientation="vertical"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+       <androidx.recyclerview.widget.RecyclerView
+           android:layout_weight="1"
+           android:layout_margin="8dp"
+           android:id="@+id/recyclerView"
+           android:scrollbarSize="5dp"
+           android:scrollbars="vertical"
+           android:scrollbarThumbVertical="@color/appBlue"
+           android:scrollbarAlwaysDrawVerticalTrack="true"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
+       <LinearLayout
+           android:layout_gravity="center"
+           android:layout_margin="8dp"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal">
+           <androidx.recyclerview.widget.RecyclerView
+               android:layout_gravity="center"
+               android:scrollbars="horizontal"
+               android:scrollbarThumbHorizontal="@color/appBlue"
+               android:scrollbarTrackHorizontal="@color/appBlue"
+               android:scrollbarAlwaysDrawHorizontalTrack="true"
+               android:layout_weight="1"
+               android:id="@+id/recyclerViewPageNumbers"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
+           <include layout="@layout/layout_scrollable_icon" android:id="@+id/layoutIconScroll"/>
+           <com.google.android.material.floatingactionbutton.FloatingActionButton
+               android:layout_gravity="center"
+               android:id="@+id/floatingActionButton"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:src="@drawable/add"
+               android:text="Add"
+               android:backgroundTint="@color/appBlue" />
+       </LinearLayout>
 
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+   </LinearLayout>
+</RelativeLayout>
