--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.sipl.egstabdistribution.ui.RegistrationActivity">
-    <LinearLayout
+    <TextView
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:fontFamily="@font/poppins"
+        android:text="Please check internet connection"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></TextView>
+    <ScrollView
+        android:id="@+id/layoutMain"
         android:layout_margin="16dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <TextView
             android:visibility="gone"
             android:layout_width="wrap_content"
@@ -521,6 +536,6 @@
             android:text="@string/register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></Button>
-
-    </LinearLayout>
-</ScrollView>
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
