--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -533,7 +533,7 @@
             android:id="@+id/btnRegister"
             android:layout_marginTop="16dp"
             android:background="@drawable/rounded_background"
-            android:text="@string/register"
+            android:text="@string/submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></Button>
         </LinearLayout>
