--- a/app/src/main/res/layout/activity_beneficiary_details.xml
+++ b/app/src/main/res/layout/activity_beneficiary_details.xml
@@ -239,6 +239,7 @@
                                     android:layout_height="100dp"></ImageView>
 
                                 <TextView
+                                    android:lines="2"
                                     android:textSize="14sp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent"
@@ -272,6 +273,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="100dp"></ImageView>
                                 <TextView
+                                    android:lines="2"
                                     android:textSize="14sp"
                                     android:gravity="center"
                                     android:layout_marginBottom="10dp"
@@ -305,6 +307,7 @@
                                     android:layout_height="100dp"></ImageView>
 
                                 <TextView
+                                    android:lines="2"
                                     android:textSize="14sp"
                                     android:gravity="center"
                                     android:layout_marginBottom="10dp"
@@ -338,6 +341,7 @@
                                     android:layout_height="100dp"></ImageView>
 
                                 <TextView
+                                    android:lines="2"
                                     android:textSize="14sp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent"
