--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.sipl.egstabdistribution.ui.RegistrationActivity">
+    tools:context="com.sipl.egstabdistribution.ui.activities.RegistrationActivity">
     <TextView
         android:visibility="gone"
         android:layout_centerInParent="true"
