--- a/app/src/main/res/layout/activity_offline_beneficiary_details.xml
+++ b/app/src/main/res/layout/activity_offline_beneficiary_details.xml
@@ -37,6 +37,29 @@
                     android:orientation="vertical"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp">
+                    <LinearLayout
+                        android:visibility="gone"
+                        android:layout_marginBottom="16dp"
+                        android:id="@+id/layoutSyncFailed"
+                        android:layout_marginTop="16dp"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:text="@string/sync_failed_reason"
+                            android:textSize="16sp"
+                            android:textColor="@color/myred"
+                            android:layout_weight="7"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"></TextView>
+                        <TextView
+                            android:textSize="16sp"
+                            android:id="@+id/tvFailedReason"
+                            android:ellipsize="end"
+                            android:layout_weight="4"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"></TextView>
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
