--- a/app/src/main/res/layout/item_row_offline_beneficiary.xml
+++ b/app/src/main/res/layout/item_row_offline_beneficiary.xml
@@ -52,10 +52,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"></TextView>
                     <ImageView
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:layout_gravity="end"
                         android:layout_marginRight="10dp"
-                        android:id="@+id/ivEdit"
+                        android:id="@+id/ivDelete"
+                        android:src="@drawable/delete"
                         android:layout_width="24dp"
                         android:layout_height="24dp"></ImageView>
                 </LinearLayout>
