--- a/app/src/main/res/layout/activity_offline_beneficiary_details.xml
+++ b/app/src/main/res/layout/activity_offline_beneficiary_details.xml
@@ -145,7 +145,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="7"
-                            android:text="@string/village"
+                            android:text="@string/grampanchayat_name"
                             android:textColor="@color/black"
                             android:textSize="14sp"></TextView>
 
@@ -161,6 +161,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
