After local.properties key & http level inteceptor

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -58,7 +58,7 @@
                     android:drawableEnd="@drawable/arrow_dropdown"
                     android:paddingLeft="16dp"
                     android:layout_weight="1"
-                    android:hint="@string/district"
+                    android:hint="@string/select_district"
                     android:inputType="none"
                     android:background="@drawable/edittext_background"
                     android:layout_width="wrap_content"
@@ -83,7 +83,7 @@
                     android:drawableEnd="@drawable/arrow_dropdown"
                     android:paddingLeft="16dp"
                     android:layout_weight="1"
-                    android:hint="@string/taluka"
+                    android:hint="@string/select_taluka"
                     android:inputType="none"
                     android:background="@drawable/edittext_background"
                     android:layout_width="wrap_content"
@@ -109,7 +109,7 @@
                     android:drawableEnd="@drawable/arrow_dropdown"
                     android:paddingLeft="16dp"
                     android:layout_weight="1"
-                    android:hint="@string/grampanchayat_name"
+                    android:hint="@string/select_grampanchayat"
                     android:background="@drawable/edittext_background"
                     android:layout_width="wrap_content"
                     android:layout_height="48dp"></AutoCompleteTextView>
